WEB-1146: Fixes Stepper on PDP on iOS 9.3

--- a/web/app/containers/pdp/_pdp.scss
+++ b/web/app/containers/pdp/_pdp.scss
@@ -16,6 +16,14 @@
 }
 
 
+// In Stock Indicator
+// ---
+
+.t-pdp__indicator {
+    flex: 1 1 auto;
+}
+
+
 // Add to Cart Button
 // ---
 
